--- a/public/index.html
+++ b/public/index.html
@@ -39,5 +39,11 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script type="text/javascript">
+      var $zoho=$zoho || {};$zoho.salesiq = $zoho.salesiq || 
+      {widgetcode:"cdc1ae4504b1b75ac1f3a8f5820b843f584956fde8f3a632eccde77b5a2cedce", values:{},ready:function(){}};
+      var d=document;s=d.createElement("script");s.type="text/javascript";s.id="zsiqscript";s.defer=true;
+      s.src="https://salesiq.zoho.com/widget";t=d.getElementsByTagName("script")[0];t.parentNode.insertBefore(s,t);d.write("<div id='zsiqwidget'></div>");
+      </script>
   </body>
 </html>
