--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
 
-    <meta name="theme-color" content="#2196f3" />
+    <meta name="theme-color" content="#b71c1c" />
     <meta name="description" content="coinspringinvest.net" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
     <!--
