--- a/src/pages/homepage/css/saved_resource.html
+++ b/src/pages/homepage/css/saved_resource.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<!-- saved from url=(0034)https://reliancexchange.co/?a=paidout -->
+<!-- saved from url=(0034)https://relianceexchange.co/?a=paidout -->
 <html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   
   <title>NANO BIT</title>
-  <link rel="shortcut icon" href="https://reliancexchange.co/images/favicon.png">
+  <link rel="shortcut icon" href="https://relianceexchange.co/images/favicon.png">
   <link href="./fonts.css" rel="stylesheet" type="text/css">
   <link href="./animate.css" rel="stylesheet" type="text/css">
   <link href="./bootstrap.min.css" rel="stylesheet">
