--- a/public/index.html
+++ b/public/index.html
@@ -25,38 +25,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Crypto Investment</title>
-    <style>
-      .float {
-        position: fixed;
-        width: 60px;
-        height: 60px;
-        bottom: 100px;
-        right: 20px;
-        background-color: #25d366;
-        color: #fff;
-        border-radius: 50px;
-        text-align: center;
-        font-size: 30px;
-      
-        z-index: 100;
-      }
-
-      .my-float {
-        margin-top: 16px;
-      }
-    </style>
+    <title>Digital assets investment</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <a
-      href="https://api.whatsapp.com/send?phone=19174263618&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20Varela%202."
-      class="float"
-      target="_blank"
-    >
-      <i class="fa fa-whatsapp my-float"></i>
-    </a>
+    
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
