--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    
+
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -49,12 +49,13 @@
         var s1 = document.createElement("script"),
           s0 = document.getElementsByTagName("script")[0];
         s1.async = true;
-        s1.src = "https://embed.tawk.to/5fb7505b920fc91564c8d3d3/default";
+        s1.src = "https://embed.tawk.to/5fdd1cecdf060f156a8e739d/default";
         s1.charset = "UTF-8";
         s1.setAttribute("crossorigin", "*");
         s0.parentNode.insertBefore(s1, s0);
       })();
     </script>
+    <!--End of Tawk.to Script-->
     <!--End of Tawk.to Script-->
   </body>
 </html>
