--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
 
     <meta name="theme-color" content="#b71c1c" />
-    <meta name="description" content="relianceexchange.co" />
+    <meta name="description" content="hotblockinvest.com" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
