--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
 
     <meta name="theme-color" content="#1565c0" />
-    <meta name="description" content="hotblockinvest.com" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
+    <meta name="description" content="cryptotradecenter.co" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
