--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Digital assets investment</title>
+    <script src="//code.jivosite.com/widget/qpN36ePbBu" async></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
