--- a/src/pages/homepage/css/saved_resource(1).html
+++ b/src/pages/homepage/css/saved_resource(1).html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<!-- saved from url=(0033)https://exchangetradingzone.com/?a=last10 -->
+<!-- saved from url=(0033)https://exchangetradinginvest.com/?a=last10 -->
 <html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   
   <title>NANO BIT</title>
-  <link rel="shortcut icon" href="https://exchangetradingzone.com/images/favicon.png">
+  <link rel="shortcut icon" href="https://exchangetradinginvest.com/images/favicon.png">
   <link href="./fonts.css" rel="stylesheet" type="text/css">
   <link href="./animate.css" rel="stylesheet" type="text/css">
   <link href="./bootstrap.min.css" rel="stylesheet">
