--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
     <meta name="theme-color" content="#1565c0" />
-    <meta name="description" content="exchangetradinginvest.com" />
+    <meta name="description" content="exchangetradingzone.com" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
