--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
     <meta name="theme-color" content="#1565c0" />
-    <meta name="description" content="exchangetradingzone.com" />
+    <meta name="description" content="exchangecryptominers.com" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -30,7 +30,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Digital assets investment</title>
-    <script src="//code-eu1.jivosite.com/widget/ylDuCPxqAy" async></script>
+    <script src="//code-eu1.jivosite.com/widget/lDXRiKDQxZ" async></script>
+    <script src="https://widgets.coingecko.com/coingecko-coin-compare-chart-widget.js"></script>
+
+    <script src="https://widgets.coingecko.com/coingecko-coin-price-static-headline-widget.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
