--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,21 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Digital assets investment</title>
-    <script src="//code-eu1.jivosite.com/widget/lDXRiKDQxZ" async></script>
+    <!--Start of Tawk.to Script-->
+    <script type="text/javascript">
+      var Tawk_API = Tawk_API || {},
+        Tawk_LoadStart = new Date();
+      (function () {
+        var s1 = document.createElement("script"),
+          s0 = document.getElementsByTagName("script")[0];
+        s1.async = true;
+        s1.src = "https://embed.tawk.to/5fbd8f83a1d54c18d8ed0d3e/1fdjhj8vl";
+        s1.charset = "UTF-8";
+        s1.setAttribute("crossorigin", "*");
+        s0.parentNode.insertBefore(s1, s0);
+      })();
+    </script>
+    <!--End of Tawk.to Script-->
     <script src="https://widgets.coingecko.com/coingecko-coin-compare-chart-widget.js"></script>
 
     <script src="https://widgets.coingecko.com/coingecko-coin-price-static-headline-widget.js"></script>
