--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,8 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
-    />
     <meta name="theme-color" content="#1565c0" />
-    <meta name="description" content="exchangecryptominers.com" />
+    <meta name="description" content="exchangetradingzone.com" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -30,24 +26,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Digital assets investment</title>
-    <!--Start of Tawk.to Script-->
-    <script type="text/javascript">
-      var Tawk_API = Tawk_API || {},
-        Tawk_LoadStart = new Date();
-      (function () {
-        var s1 = document.createElement("script"),
-          s0 = document.getElementsByTagName("script")[0];
-        s1.async = true;
-        s1.src = "https://embed.tawk.to/5fbd8f83a1d54c18d8ed0d3e/1fdjhj8vl";
-        s1.charset = "UTF-8";
-        s1.setAttribute("crossorigin", "*");
-        s0.parentNode.insertBefore(s1, s0);
-      })();
-    </script>
-    <!--End of Tawk.to Script-->
-    <script src="https://widgets.coingecko.com/coingecko-coin-compare-chart-widget.js"></script>
-
-    <script src="https://widgets.coingecko.com/coingecko-coin-price-static-headline-widget.js"></script>
+    <script src="//code-eu1.jivosite.com/widget/ylDuCPxqAy" async></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
