--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 
     <meta name="theme-color" content="#1565c0" />
-    <meta name="description" content="exchangetradingzone.com" />
+    <meta name="description" content="unchainedtrade.com" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
