--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Digital assets investment</title>
-    <script src="//code-eu1.jivosite.com/widget/yUfHsXc9dg" async></script>
+    <script src="//code-eu1.jivosite.com/widget/SYpoXVXV7n" async></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
