--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Digital assets investment</title>
-    <script src="//code-eu1.jivosite.com/widget/SYpoXVXV7n" async></script>
+   
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -42,6 +42,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script type="text/javascript" id="zsiqchat">var $zoho=$zoho || {};$zoho.salesiq = $zoho.salesiq || {widgetcode: "50c849fc9dd2b7355d26559c1e8b6eb00dfe29e339787b64d7937a5dd56e2fa0ebdeb60b43642593a89d584aca0b0964", values:{},ready:function(){}};var d=document;s=d.createElement("script");s.type="text/javascript";s.id="zsiqscript";s.defer=true;s.src="https://salesiq.zoho.com/widget";t=d.getElementsByTagName("script")[0];t.parentNode.insertBefore(s,t);</script>
   </body>
 </html>
 
