--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <meta name="theme-color" content="#1565c0" />
     <meta name="description" content="unchainedtrade.com" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -25,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Digital assets investment</title>
+    <title>Cloud Mining</title>
    
   </head>
   <body>
