--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Cloud Mining</title>
-   
+    <script type="module" src="%PUBLIC_URL%/yatranslate.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -45,7 +45,8 @@
     -->
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-  </body>
+  <script src="//code.tidio.co/9dtay2iik8krgo7rvkxbl00qlrmwgqcq.js" async></script>  
+</body>
 </html>
 
 <!--
