--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
-    <meta name="description" content="binanceearnpro.web.app" />
+    <meta name="description" content="bepro.web.app" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -28,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Cloud Mining</title>
+    <title>Crypto Investment</title>
     <script type="module" src="%PUBLIC_URL%/yatranslate.js"></script>
   </head>
   <body>
